--- a/app/components/Node/Node.module.scss
+++ b/app/components/Node/Node.module.scss
@@ -14,6 +14,11 @@
   color: $light-gray;
 }
 
+.input {
+  font-size: 2.7rem;
+  color: $light-gray;
+}
+
 .edge {
   height: 6rem;
   width: 0.3rem;
