--- a/app/components/Toolbar/ToolbarBox/Toolbar.module.scss
+++ b/app/components/Toolbar/ToolbarBox/Toolbar.module.scss
@@ -1,6 +1,9 @@
 .toolbarBox {
+  flex-basis: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   background-color: #26292c;
-  align-self: flex-start;
   padding: 2rem 4.5rem;
   height: 100%;
 }
