graying out navbar & toolbar options while animation is playing

--- a/app/components/Navbar/Navbar List/Navbar.module.scss
+++ b/app/components/Navbar/Navbar List/Navbar.module.scss
@@ -8,9 +8,14 @@
 }
 
 .login {
-  color: #9da1aa;
+  color: #eded;
   margin-left: 12rem;
   margin-right: 2rem;
+  font-weight: 600;
+  font-size: 2.2rem;
+  text-transform: capitalize;
+  text-align: center;
+  cursor: pointer;
 }
 
 .generateRandom {
