--- a/app/components/Node/NodeBox.module.scss
+++ b/app/components/Node/NodeBox.module.scss
@@ -2,6 +2,13 @@
   position: relative;
   width: 6rem;
   height: 6rem;
+
+  path {
+    stroke-dasharray: 300;
+    stroke-dashoffset: 300;
+    animation: arrow 1s ease-in-out;
+    animation-fill-mode: forwards;
+  }
 }
 
 .label {
@@ -22,4 +29,10 @@
   font-size: 2rem;
 
   transform: translateX(-50%);
+}
+
+@keyframes arrow {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
