--- a/app/components/Node/Node.module.scss
+++ b/app/components/Node/Node.module.scss
@@ -2,11 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: transparent;
   background-color: #55888b;
   border: 1px solid #2f4a4c;
   width: 6rem;
   height: 6rem;
+
+  box-shadow: 8px 5px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
 .content {
