add footer and login pages

--- a/app/components/Navbar/Navbar List/Navbar.module.scss
+++ b/app/components/Navbar/Navbar List/Navbar.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  background-color: #1c1f21;
+  background-color: $dark-gray;
   padding: 2.7rem 0;
   border-bottom: 1px solid $davys-grey;
 }
