--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -4,5 +4,6 @@ $tertiary-color: #97db4f;
 $davys-grey: #4d5359;
 $danger: #e32636;
 $light-gray: #ededed;
+$dark-gray: #1c1f21;
 
 // https://coolors.co/4a4238-4d5359-508484-79c99e-97db4f
