--- a/app/styles/Home.module.scss
+++ b/app/styles/Home.module.scss
@@ -1,5 +1,9 @@
 .body {
-  background-color: #333;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  background-color: #333;
 }
