--- a/app/components/Navbar/SecondaryNavigation/SecondaryNavigation.module.scss
+++ b/app/components/Navbar/SecondaryNavigation/SecondaryNavigation.module.scss
@@ -1,7 +1,8 @@
 .root {
+  align-self: flex-start;
   display: flex;
   align-items: center;
-  margin-top: 4rem;
+  padding-top: 4rem;
 
   font-size: 2.4rem;
   gap: 0.8rem;
