--- a/app/components/Slider/Slider.module.scss
+++ b/app/components/Slider/Slider.module.scss
@@ -4,6 +4,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include responsive("xl") {
+    width: 15%;
+  }
+
+  @include responsive("md") {
+    width: 20%;
+  }
 }
 
 .sliderTitle {
