--- a/app/components/Navbar/Navbar List/Navbar.module.scss
+++ b/app/components/Navbar/Navbar List/Navbar.module.scss
@@ -1,26 +1,135 @@
 .navbar {
+  position: relative;
   display: flex;
   width: 100%;
   justify-content: center;
   background-color: $dark-gray;
-  padding: 2.7rem 0;
+  padding: 2.7rem 2rem;
   border-bottom: 1px solid $davys-grey;
+
+  @include responsive("md") {
+    transition: all 0.2s;
+    height: 50px;
+    overflow: hidden;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: $dark-gray;
+    }
+  }
 }
 
 .login {
   color: #eded;
   width: 100px;
   margin-left: 12rem;
-  margin-right: 2rem;
   font-weight: 600;
   font-size: 2.2rem;
   text-transform: capitalize;
   text-align: center;
   cursor: pointer;
+
+  @include responsive("lg") {
+    margin-left: 2rem;
+    font-size: 2rem;
+  }
 }
 
 .generateRandom {
   background: linear-gradient(118deg, rgba(205, 205, 205, 1) 0%, rgba(241, 234, 219, 1) 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.label {
+  z-index: 2;
+  position: absolute;
+  top: 5px;
+  left: 10px;
+
+  display: none;
+  height: 40px;
+  width: 45px;
+  cursor: pointer;
+
+  @include responsive("md") {
+    &,
+    &::before,
+    &::after {
+      display: inline-block;
+    }
+  }
+}
+
+.burgerMenu {
+  position: absolute;
+  width: 35px;
+  height: 3px;
+  top: 22px;
+  left: 10px;
+  background-color: $primary-color;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: 0;
+    width: 35px;
+    height: 3px;
+
+    background-color: $primary-color;
+    transition: all 0.2s;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 35px;
+    height: 3px;
+
+    background-color: $primary-color;
+    transition: all 0.2s;
+  }
+}
+
+.navbarCheckbox {
+  display: none;
+
+  &:checked {
+    + .label {
+      transition: all 0.2s;
+      .burgerMenu {
+        background-color: transparent;
+
+        &::before {
+          top: 0;
+          transform: rotate(-135deg);
+        }
+
+        &::after {
+          top: 0;
+          transform: rotate(135deg);
+        }
+      }
+    }
+
+    ~ .navbar {
+      height: 17rem;
+      padding: 6.5rem 1.2rem 2rem 1.2rem;
+
+      &::before {
+        content: none;
+      }
+
+      @include responsive("sm") {
+        height: 19.5rem;
+      }
+    }
+  }
 }
