--- a/app/components/Toolbar/ToolbarItem/ToolbarItem.module.scss
+++ b/app/components/Toolbar/ToolbarItem/ToolbarItem.module.scss
@@ -5,11 +5,21 @@
     margin-bottom: 3.5rem;
   }
   position: relative;
+
+  @include responsive("lg") {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .toolbarItem {
   font-size: 2.2rem;
   color: $light-gray;
+
+  @include responsive("md") {
+    font-size: 2rem;
+  }
 }
 
 .icon {
