--- a/app/components/Navbar/Navbar Item/NavbarItem.module.scss
+++ b/app/components/Navbar/Navbar Item/NavbarItem.module.scss
@@ -19,4 +19,12 @@
       margin-right: 2rem;
     }
   }
+
+  @include responsive("xs") {
+    &:not(:last-child) {
+      margin-right: 0;
+      padding: 0.5rem 0;
+      border-bottom: 1px solid rgba(white, 0.1);
+    }
+  }
 }
