--- a/app/components/Navbar/Navbar List/Navbar.module.scss
+++ b/app/components/Navbar/Navbar List/Navbar.module.scss
@@ -21,6 +21,10 @@
       background: $dark-gray;
     }
   }
+
+  @include responsive("xs") {
+    flex-direction: column;
+  }
 }
 
 .login {
@@ -36,6 +40,14 @@
   @include responsive("lg") {
     margin-left: 2rem;
     font-size: 2rem;
+  }
+
+  @include responsive("xs") {
+    margin: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -123,12 +135,17 @@
       height: 17rem;
       padding: 6.5rem 1.2rem 2rem 1.2rem;
 
-      &::before {
-        content: none;
-      }
-
       @include responsive("sm") {
         height: 19.5rem;
+      }
+
+      @include responsive("xs") {
+        padding: 3rem 1rem 1.8rem 1rem;
+        height: 26.5rem;
+      }
+
+      &::before {
+        content: none;
       }
     }
   }
@@ -146,4 +163,12 @@
 
 .logOut {
   color: rgba(white, 0.6);
+
+  @include responsive("md") {
+    font-size: 1.8rem;
+  }
+
+  @include responsive("sm") {
+    padding: 0.5rem 0;
+  }
 }
