--- a/app/components/Toolbar/ToolbarBox/Toolbar.module.scss
+++ b/app/components/Toolbar/ToolbarBox/Toolbar.module.scss
@@ -24,6 +24,11 @@
     padding: 1.5rem 3rem;
     flex-basis: 10%;
   }
+
+  @include responsive("xs") {
+    gap: 1rem;
+    justify-content: space-between;
+  }
 }
 
 .toolbarTitle {
